# Il-fuorisede-disperato

./: Il_fuorisede_disperato.pro  LICENSE  Makefile  README.md  resources.qrc
Controller/FileCPP/: dbcontroller.cpp
Controller/FileH/: dbcontroller.h
Database/: CMakeLists.txt  DatabasePAO.db  database.cpp  database.h
Model/: CMakeLists.txt  main.cpp
Model/FileCPP/: Casa.cpp  Cibo.cpp  Item.cpp  Libri.cpp  Trasporto.cpp  Utenti.cpp  Vestiti.cpp
Model/FileH/: Casa.h  Cibo.h  DoubleList.h  Item.h  Libri.h  Trasporto.h  Utenti.h  Vestiti.h  VisitorItemInterface.h
View/FileCPP/: VisitorItem.cpp  aggiungiItem.cpp  carrello.cpp  hamburgermenu.cpp  home.cpp  itemWidget.cpp  login.cpp  loginForm.cpp  main.cpp  modificaItem.cpp  profile.cpp  registrazione.cpp  scrollWidget.cpp
View/FileH/: VisitorItem.h  aggiungiItem.h  carrello.h  hamburgermenu.h  home.h  itemWidget.h  login.h  loginForm.h  modificaItem.h  profile.h  registrazione.h  scrollWidget.h
